--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -698,6 +698,39 @@
 
         <% backtrace_frames.each_with_index do |frame, index| %>
             <div class="frame_info" id="frame_info_<%= index %>" style="display:<% if index == 0%>block<% else %>none<%end%>;"></div>
+            <% if index == 0 %>
+                            <header class="trace_info">
+                    <div class="title">
+                        <h2 class="name"><%= frame.name %></h2>
+                        <div class="location"><span class="filename"><a href="<%= editor_url(frame) %>"><%= frame.pretty_path %></a></span></div>
+                    </div>
+                    
+                    <%== highlighted_code_block frame %>
+                
+                    <% if BetterErrors.binding_of_caller_available? && frame.frame_binding %>
+                        <div class="repl">
+                            <div class="console">
+                                <pre></pre>
+                                <div class="prompt"><span>&gt;&gt;</span> <input/></div>
+                            </div>
+                        </div>
+                    <% end %>
+                </header>
+
+                <% if BetterErrors.binding_of_caller_available? && frame.frame_binding %>
+                    <div class="hint">
+                        This a live shell. Type in here.
+                    </div>
+
+                    <div class="variable_info"></div>
+                <% end %>
+                
+                <% unless BetterErrors.binding_of_caller_available? %>
+                    <div class="hint">
+                        <strong>Tip:</strong> add <code>gem "binding_of_caller"</code> to your Gemfile to enable the REPL and local/instance variable inspection.
+                    </div>
+                <% end %>
+            <% end %>
         <% end %>
     </section>
 </body>
